--- a/tax/src/main/resources/templates/invoicesView.html
+++ b/tax/src/main/resources/templates/invoicesView.html
@@ -11,7 +11,7 @@
 <body>
 	<div class="container">
 		<h2>
-			Welcome to the Invoices Manager of <span th:text="${payer.type}">Seller</span>
+			Welcome to the Invoices Manager of 
 			<span th:text="${payer.name}">João</span> with NIF <span
 				th:text="${payer.nif}">12246765</span>
 		</h2>
@@ -22,11 +22,12 @@
 		<form class="form-inline"
 			th:action="@{/tax/payers/{nif}/invoices(nif=${payer.nif})}"
 			th:object="${invoice}" method="post">
-			<span th:switch="${payer.type}"> <span
-				th:case="${T(pt.ulisboa.tecnico.softeng.tax.services.local.dataobjects.TaxPayerData.Type).BUYER}">
-					<label>Seller NIF: </label> <input class="form-control input-sm"
+			<span>
+				<label>Seller NIF: </label> <input class="form-control input-sm"
 					type="text" size="9" th:field="*{sellerNif}" />
-			</span> <span th:case="*"> <label>Buyer NIF: </label> <input
+			</span> 
+			<span> 
+				<label>Buyer NIF: </label> <input
 					class="form-control input-sm" type="text" size="9"
 					th:field="*{buyerNif}" />
 			</span>
