--- a/tax/src/main/resources/templates/payersView.html
+++ b/tax/src/main/resources/templates/payersView.html
@@ -20,11 +20,7 @@
 				type="text" th:field="*{name}" /> <label>Address: </label> <input
 				class="form-control input-sm" type="text" th:field="*{address}" />
 			<label>NIF: </label> <input class="form-control input-sm" type="text"
-				size="9" th:field="*{nif}" /> <label>Type: </label> <select
-				class="form-control" th:field="*{type}">
-				<option
-					th:each="type : ${T(pt.ulisboa.tecnico.softeng.tax.services.local.dataobjects.TaxPayerData.Type).values()}"
-					th:value="${type}" th:text="${type}"></option>
+				size="9" th:field="*{nif}" /> 
 			</select> <input class="btn btn-primary btn-sm" type="submit" value="Submit" />
 		</form>
 		<br />
@@ -35,7 +31,6 @@
 					<th>Name</th>
 					<th>Address</th>
 					<th>NIF</th>
-					<th>Type</th>
 					<th>Taxes</th>
 					<th>Invoices</th>
 				</tr>
@@ -45,22 +40,20 @@
 					<td th:text="${payer.name}">João</td>
 					<td th:text="${payer.address}">Av</td>
 					<td th:text="${payer.nif}">1234556789</td>
-					<td th:text="${payer.type}">SELLER</td>
 					<th>
 						<table class="table table-striped">
 							<thead>
 								<tr>
 									<th>Year</th>
-									<th><span th:switch="${payer.type}"> <span
-											th:case="${T(pt.ulisboa.tecnico.softeng.tax.services.local.dataobjects.TaxPayerData.Type).BUYER}">Tax
-												Return</span> <span th:case="*">To Pay</span>
-									</span></th>
+									<th>Tax Return</th>
+									<th>To Pay</th>
 								</tr>
 							</thead>
 							<tbody>
 								<tr th:each="key: ${payer.getTaxes().keySet()}">
 									<td th:text="${key}">2018</td>
 									<td th:text="${payer.getTaxes().get(key)}">567.98</td>
+									<td th:text="${payer.getReturns().get(key)}">567.98</td>
 								</tr>
 							</tbody>
 						</table>
