--- a/bank/src/main/resources/templates/clients.html
+++ b/bank/src/main/resources/templates/clients.html
@@ -48,7 +48,8 @@
 					<th>Time</th>
  					<th>Reference</th>
  					<th>Type</th>
- 					<th>Iban</th>
+					 <th>Source Iban</th>
+					 <th>Target Iban</th>
  					<th>Value</th>
 				</tr>
 			</thead>
@@ -57,7 +58,9 @@
 					<td th:text="${operation.time}">2017/04/01</td>
 					<td th:text="${operation.reference}">BK12344567</td>
 					<td th:text="${operation.type}">DEPOSIT</td>
-					<td th:text="${operation.iban}">123456</td>
+					<td th:text="${operation.sourceIban}">123456</td>
+					<td th:if="${operation.type == 'TRANSFER'}" th:text="${operation.sourceIban}">123456</td>
+					<td th:unless="${operation.type == 'TRANSFER'}" th:text="-">123456</td>
 					<td th:text="${operation.value}">200</td>
 				</tr>
 			</tbody>
