--- a/bank/src/main/resources/templates/account.html
+++ b/bank/src/main/resources/templates/account.html
@@ -35,6 +35,16 @@
 			<label>Amount: </label> <input class="form-control" type="number" step="0.01" min="0.01" th:field="*{amount}" /> 
 			<input class="btn btn-primary" type="submit" value="Submit" />
 		</form>
+
+		<h3>Transfer</h3>
+		<form class="form-inline"
+			th:action="@{/banks/{code}/clients/{id}/accounts/{iban}/transfer/(code=${client.bankCode},id=${client.id},iban=${account.iban})}"
+			th:object="${operation}" method="post">
+			<label>Iban</label> <input class="form-control" type="text" th:field="*{targetIban}" />
+			<label>Amount: </label> <input class="form-control" type="number" step="0.01" min="0.01" th:field="*{value}" /> 
+			<input class="btn btn-primary" type="submit" value="Submit" />
+		</form>
+
 	</div>
 </body>
 </html>
