fix success sequence test (closes #209)

--- a/broker/src/main/resources/templates/adventures.html
+++ b/broker/src/main/resources/templates/adventures.html
@@ -88,8 +88,8 @@
 					<td th:text="${adventure.begin}">begin</td>
 					<td th:text="${adventure.end}">end</td>
 					<td th:text="${adventure.margin}">0.15</td>
-					<td th:text="${adventure.vehicle}">true</td>
-					<td th:text="${adventure.roomType}">true</td>
+					<td th:text="${adventure.rentVehicle}">true</td>
+					<td th:text="${adventure.bookRoom}">true</td>
 					<td th:text="${adventure.amount}">type</td>
 					<td th:text="${adventure.state}">state</td>
 					<td th:text="${adventure.paymentConfirmation}">Payment
